# spaceport-sp-opensource

./: .gitignore  Makefile  README.md  android-build.sh  spaceport-shake.cabal
cbits/: blockfd.c
docs/: spaceport-push.md
jenkins/: build.sh  test-config.sh  test.sh
lib/: QuasiQuoters.hs  TH.hs
lib/Codec/Archive/: ZipExtras.hs
lib/Control/Concurrent/: SpExtras.hs
lib/Data/: ApplicationID.hs  Plist.hs  SpaceportSettings.hs
lib/Data/Android/: PackageName.hs
lib/Data/IOS/: BundleID.hs  InfoPlist.hs
lib/Data/Plist/: Decode.hs  Encode.hs  IO.hs  Types.hs
lib/Data/Plist/Decode/: Binary.hs  XML.hs
lib/Data/Plist/Encode/: Binary.hs  XML.hs
lib/Data/Text/: Edit.hs
lib/Development/: ShakeExtras.hs
lib/Development/ActionScript3/: Error.hs  FlashBuilder.hs  FlashDevelop.hs  Project.hs
lib/Development/Android/: Adb.hs
lib/Development/IOS/: Device.hs  Identity.hs  MobileProvision.hs
lib/Development/Spaceport/: Build.hs  BuildConfig.hs  BuildTarget.hs  GameFile.hs  Manifest.hs  RunTool.hs  Support.hs  SupportPaths.hs  Tools.hs  Util.hs
lib/Development/Spaceport/Android/: Build.hs  Manifest.hs  MyGame.hs  Target.hs
lib/Development/Spaceport/Common/: Tools.hs
lib/Development/Spaceport/Core/: Build.hs  Target.hs  Tools.hs
lib/Development/Spaceport/IOS/: Build.hs  Settings.hs  Target.hs  Tools.hs
lib/Development/Spaceport/Tools/: A2J.hs  Aapt.hs  Adb.hs  Dex.hs  DexMerge.hs  IDeviceID.hs  IDeviceInstaller.hs  Sgftool.hs  Simulator.hs  SpSigner.hs  Spsx.hs  Swc2Swf.hs  ZipAlign.hs
lib/Network/: MDNS.hs
lib/Network/MDNS/: API.hs  Foreign.hs  Load.hs
lib/Network/MDNS/Load/: Common.hs  Darwin.hs  Linux.hs  Posix.hs  Windows.hs
lib/Network/Spaceport/: Commander.hs  Common.hs  Console.hs  Neighborhood.hs
lib/Network/Spaceport/Protocol/: Commander.hs  Console.hs  Internal.hs
lib/System/: Java.hs
lib/System/Environment/: Expand.hs
lib/System/Environment/Expand/: Fallback.hs  Unix.hs  Windows.hs
lib/System/IO/: BlockFD.hs  Prompt.hs
lib/System/IO/Prompt/: Password.hs
lib/System/Java/: Locate.hs  Nailgun.hs
lib/System/Process/: Handle.hs  Runner.hs
lib/Text/: JavaProperties.hs
lib/Text/JavaProperties/: Parse.hs  Print.hs  Types.hs
lib/Text/JavaProperties/Internal/: Parse.hs  Print.hs  Types.hs
lib/Text/XML/: DOMExtras.hs
scripts/: parallel.sh
src/: BashCompletion.hs  CheckBuild.hs  Command.hs  ConfigureIOS.hs  Main.hs  ModeConfig.hs  ProgramInfo.hs  Server.hs  Settings.hs  Simulator.hs  Sp.hs
src/Command/: Build.hs  Bundle.hs  Common.hs  Config.hs  Install.hs  Push.hs  Serve.hs  Simulator.hs
test/: Main.hs  version.sh
test/Test/Data/: SpaceportSettings.hs
test/Test/Data/Android/: PackageName.hs
test/Test/Data/IOS/: BundleID.hs
test/Test/Data/Plist/: Decode.hs  EncodeDecode.hs
test/Test/Data/Text/: Edit.hs
test/Test/Development/ActionScript3/: Project.hs
test/Test/Development/Spaceport/: Manifest.hs  Util.hs
test/Test/Text/: JavaProperties.hs
test/Test/Text/JavaProperties/: Parse.hs
test/parallel/: failure.sh  success.sh
