name: spaceport-shake
version: 0.1
synopsis: Blends your project into a Spaceport project
category: Development
-- description:

license: BSD3
-- license-file: LICENSE
author: Matt Glazar
maintainer: strager.nds@gmail.com
-- copyright:

build-type: Simple
cabal-version: >= 1.8
-- extra-source-files:

flag dochack
  default: False
  description:
    Hack to get Haddock documentation, by disabling executables.  This is a
    workaround for a cabal bug; see Issue #347.

    This workaround is taken from the yi project:
    https://github.com/yi-editor/yi/commit/3ec342942707e42e1ce465196267784473d9be50

flag debug
  default: False
  description:
    Enables debugging options.

flag nailgun
  default: True
  description:
    Enable use of Nailgun for faster Java invocations.

flag profile
  default: False
  description:
    Enables profiling (i.e. -fprof-auto).

Library
  hs-source-dirs:
    vendor/base/src
    lib

  exposed-modules:
    Codec.Archive.ZipExtras,

    Control.Concurrent.SpExtras,

    Data.Android.PackageName,

    Data.ApplicationID,

    Data.IOS.BundleID,
    Data.IOS.InfoPlist,

    Data.Plist.IO,
    Data.Plist.Types,

    Data.Plist.Decode,
    Data.Plist.Decode.Binary,
    Data.Plist.Decode.XML,

    Data.Plist.Encode,
    Data.Plist.Encode.Binary,
    Data.Plist.Encode.XML,

    Data.SpaceportSettings,

    Data.Text.Edit,

    Development.ActionScript3.Project,
    Development.ActionScript3.Error,
    Development.ActionScript3.FlashBuilder,
    Development.ActionScript3.FlashDevelop,

    Development.Android.Adb,

    Development.IOS.Device,
    Development.IOS.Identity,
    Development.IOS.MobileProvision,

    Development.ShakeExtras,

    Development.Spaceport.Build,
    Development.Spaceport.BuildConfig,
    Development.Spaceport.BuildTarget,
    Development.Spaceport.GameFile,
    Development.Spaceport.Manifest,
    Development.Spaceport.RunTool,
    Development.Spaceport.Support,
    Development.Spaceport.SupportPaths,
    Development.Spaceport.Util,

    Development.Spaceport.Core.Build,
    Development.Spaceport.Core.Target,
    Development.Spaceport.Core.Tools,

    Development.Spaceport.IOS.Build,
    Development.Spaceport.IOS.Settings,
    Development.Spaceport.IOS.Target,
    Development.Spaceport.IOS.Tools,

    Development.Spaceport.Android.Build,
    Development.Spaceport.Android.Target,
    Development.Spaceport.Android.Manifest,
    Development.Spaceport.Android.MyGame,

    Development.Spaceport.Common.Tools,

    Development.Spaceport.Tools.A2J,
    Development.Spaceport.Tools.Aapt,
    Development.Spaceport.Tools.Adb,
    Development.Spaceport.Tools.Dex,
    Development.Spaceport.Tools.DexMerge,
    Development.Spaceport.Tools.IDeviceID,
    Development.Spaceport.Tools.IDeviceInstaller,
    Development.Spaceport.Tools.Sgftool,
    Development.Spaceport.Tools.Simulator,
    Development.Spaceport.Tools.SpSigner,
    Development.Spaceport.Tools.Spsx,
    Development.Spaceport.Tools.Swc2Swf,
    Development.Spaceport.Tools.ZipAlign,

    Network.MDNS,
    Network.MDNS.API,
    Network.MDNS.Foreign,
    Network.MDNS.Load,
    Network.MDNS.Load.Common,

    Network.Spaceport.Commander,
    Network.Spaceport.Console,
    Network.Spaceport.Neighborhood,

    Network.Spaceport.Protocol.Commander,
    Network.Spaceport.Protocol.Console,

    -- Temporary!
    QuasiQuoters,

    System.Environment.ExecutablePath,
    System.IO.BlockFD,
    System.IO.Prompt,
    System.IO.Prompt.Password,
    System.Process.Handle,
    System.Process.Runner,

    System.Java,
    System.Java.Locate,

    Text.JavaProperties,
    Text.JavaProperties.Internal.Parse,
    Text.JavaProperties.Internal.Print,
    Text.JavaProperties.Internal.Types,
    Text.JavaProperties.Parse,
    Text.JavaProperties.Print,
    Text.JavaProperties.Types,

    Text.XML.DOMExtras,

    -- Temporary!
    TH

  if flag(nailgun)
    exposed-modules: System.Java.Nailgun
    cpp-options: -DUSE_NAILGUN

  other-modules:
    Network.Spaceport.Common,
    Network.Spaceport.Protocol.Internal

  if os(windows)
    c-sources: cbits/blockfd.c
    cpp-options: -DUSE_CUSTOM_THREAD_WAIT

  build-depends:
    aeson,
    async == 2.0.*,
    attoparsec,
    attoparsec-binary,
    base >= 4.2 && < 4.6,
    base64-bytestring,
    -- Constrained by zip-archive.
    binary < 0.6.0.0,
    bytestring == 0.9.*,
    conduit,
    containers >= 0.3 && < 0.5,
    cryptohash == 0.7.*,
    data-binary-ieee754,
    directory >= 1.0.0.0,
    dlist,
    filepath,
    haskeline == 0.7.*,
    monad-parallel,
    network,
    parsec == 3.*,
    process >= 1.0.1.1 && < 2.0.0.0,
    shake == 0.3.*,
    template-haskell,
    temporary,
    text >= 0.10 && < 0.12,
    time,
    transformers,
    unordered-containers,
    vector,
    xml-conduit == 1.0.* || == 1.1.*,
    xml-types == 0.3.*,
    zip-archive == 0.1.*

  -- mDNSResponder / DNS-SD
  if os(windows)
    other-modules: Network.MDNS.Load.Windows
    cpp-options: -DDNSSD_CALL=stdcall -DDNSSD_MODULE=Windows
  else
    if os(linux)
      other-modules:
        Network.MDNS.Load.Linux,
        Network.MDNS.Load.Posix
      cpp-options: -DDNSSD_CALL=ccall -DDNSSD_MODULE=Linux
    else
      if os(darwin)
        other-modules:
          Network.MDNS.Load.Darwin,
          Network.MDNS.Load.Posix
        cpp-options: -DDNSSD_CALL=ccall -DDNSSD_MODULE=Darwin

  if flag(debug)
    ghc-options:
      -debug

  -- MissingH 1.2.0.0 is broken on Windows in the presence of
  -- directory >= 1.2.0.0.
  if os(windows)
    build-depends:
      directory < 1.2.0.0

  -- Environment.Expand
  if os(windows)
    cpp-options: -DEXPAND_WINDOWS
    other-modules:
      System.Environment.Expand.Windows
  else
    if os(unix) || os(darwin)
      build-depends: unix
      cpp-options: -DEXPAND_UNIX
      other-modules:
        System.Environment.Expand.Unix
    else
      other-modules:
        System.Environment.Expand.Fallback

  if os(windows)
    build-depends: Win32
    cpp-options: -DWINDOWS_TOOLS
  else
    if os(darwin)
      cpp-options: -DOSX_TOOLS
    else
      if os(linux)
        cpp-options: -DLINUX_TOOLS

  ghc-options:
    -Wall -Werror

Executable sp
  hs-source-dirs: src
  main-is: Main.hs

  build-depends:
    async == 2.0.*,
    base >= 4 && < 4.6,
    bytestring,
    containers,
    directory >= 1.0.0.0,
    either >= 3.0.1,
    filepath,
    monad-parallel,
    network,
    optparse-applicative == 0.5.*,
    process,
    shake == 0.3.*,
    spaceport-shake,
    system-filepath,
    template-haskell,
    temporary,
    text,
    time,
    transformers,
    wai-app-static,
    warp >= 1.3.2,
    xdg-basedir == 0.2.2

  if flag(nailgun)
    cpp-options: -DUSE_NAILGUN

  if flag(dochack)
    buildable: False

  if flag(debug)
    ghc-options:
      -debug

  if flag(profile)
    ghc-options:
      -fprof-auto

  ghc-options:
    -Wall -Werror
    -rtsopts
    -threaded

  -- Avahi.
  if os(linux)
    cpp-options: -DAVAHI
    build-depends: unix

  if os(windows)
    cpp-options: -DWINDOWS_TOOLS
  else
    if os(darwin)
      cpp-options: -DOSX_TOOLS
    else
      if os(linux)
        cpp-options: -DLINUX_TOOLS

Executable spaceport-shake-tests
  hs-source-dirs: test
  main-is: Main.hs

  build-depends:
    base >= 4 && < 4.6,
    bytestring,
    conduit,
    containers,
    derive,
    HUnit,
    parsec,
    QuickCheck == 2.*,
    quickcheck-instances,
    spaceport-shake,
    template-haskell,
    test-framework == 0.6.1,
    test-framework-hunit == 0.2.7,
    test-framework-quickcheck2 == 0.2.12.3,
    test-framework-th == 0.2.2,
    text,
    xml-conduit,
    xml-types == 0.3.*

  if flag(dochack)
    buildable: False

  if flag(debug)
    ghc-options:
      -debug

  if flag(profile)
    ghc-options:
      -fprof-auto

  ghc-options:
    -Wall -Werror
    -rtsopts
    -threaded
    -fno-warn-missing-signatures
